Format and optimized code